# logger

./: CMakeLists.txt
include/: logger.hpp
src/impl/: file_logger.hpp  log_config.hpp  logger.service  main.cpp
